--- a/Project/AboutPage/ContactUS-index.html
+++ b/Project/AboutPage/ContactUS-index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="ContactUS-styles.css">
+  <link rel="stylesheet" href="PAGE-styles.css">
   <script src="https://kit.fontawesome.com/1edee84bfd.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <header class="ddf">
 
@@ -15,30 +16,31 @@
 
 
 
-  <nav class="Navsec">
-    <div class="Sociallinks">
+  <nav class="nav-sec">
+    <div class="social-links">
       <a href="#" target="_blank"><i class="fa-solid fa-bars"></i></a>
 
 
 
     </div>
-    <ul class="navseclist">
-      <li><a href=""></a>Home</li>
-      <li><a href=""></a>Browse</li>
-      <li><a href=""></a>About Us</li>
+    <ul class="nav-sec-list">
+      <li><a href="HomePage-index.html"></a>Home</li>
+      <li><a href="#"></a>Browse</li>
+      <li><a href="aboutpage-index.html"></a>About Us</li>
 
-      <img class="logo" src="Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
+      <img class="logo" src="assets/Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
 
-     <ul class="navseclist2">
+     <ul class="nav-sec-list2">
       <li><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
       <li><a href=""></a>Orders</li>
-      <li><a href=""></a><i class="fa-solid fa-phone"></i></li>
+      <li><a href="3147531138"></a><i class="fa-solid fa-phone"></i></li>
      </ul>
     </ul>
 
 
   </nav>
   <main>
+
     <section class="drops">
       <h1>Contact US</h1>
       <h3>Our Team Is Waiting To Help You</h3>
@@ -46,16 +48,53 @@
     </section>
 
 
-
-
-
   </main>
 
-  <footer class="footer">
-    <div class="footerdiv">
-      <p class="Allrights">2024 all rights reserved by William Ngumo</p>
 
-      <ul class="footerlist">
+
+  <div class="form-section">
+    <!-- <img src="assets/pexels-tima-miroshnichenko-5912677.jpg" alt="here to help png" width="200" height="auto"> -->
+    <h1>Contact US</h1>
+
+    <form action="submit form">
+      <label for="name">UserName</label>
+      <input type="text" name="name" placeholder="UserName" required>
+      <br>
+      <br>
+      <br>
+
+      <label for="Email">Email</label>
+      <input type="email" name="email" placeholder="Enter Your Email" required>
+      <br>
+      <br>
+      <br>
+
+      <label for="message">message</label>
+      <textarea id="message" name="message" rows="4" placeholder="Your message"></textarea>
+      <br>
+      <br>
+      <br>
+      <button type="submit">Submit</button>
+      <br>
+      <br>
+      <h3>Thanks fo contacting Us!!!</h3>
+
+    </form>
+
+  </div>
+
+
+
+
+
+
+
+
+  <footer class="footer">
+    <div class="footer-div">
+      <p class="all-rights">2024 all rights reserved by William Ngumo</p>
+
+      <ul class="footer-list">
 
         <li><a href=""></a>Privacy Policy</li>
         <li><a href=""></a>Contact US</li>
