--- a/Project/AboutPage/HomePage-index.html
+++ b/Project/AboutPage/HomePage-index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="HomePage-styles.css">
+  <link rel="stylesheet" href="PAGE-styles.css">
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+
   <script src="https://kit.fontawesome.com/1edee84bfd.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,24 +20,24 @@
 
 
 
-  <nav class="Navsec">
-    <div class="Sociallinks">
+  <nav class="nav-sec">
+    <div class="social-links">
       <a href="#" target="_blank"><i class="fa-solid fa-bars"></i></a>
 
 
 
     </div>
-    <ul class="navseclist">
-      <li><a href=""></a>Home</li>
+    <ul class="nav-sec-list">
+      <li><a href="HomePage-index.html">Home</a></li>
       <li><a href=""></a>Browse</li>
-      <li><a href=""></a>About Us</li>
+      <li><a href="aboutpage-index.html">About</a></li>
 
       <img class="logo" src="Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
 
-     <ul class="navseclist2">
+     <ul class="nav-sec-list2">
       <li><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
       <li><a href=""></a>Orders</li>
-      <li><a href=""></a><i class="fa-solid fa-phone"></i></li>
+      <li><a href="ContactUS-index.html"><i class="fa-solid fa-phone"></i></a></li>
      </ul>
     </ul>
 
@@ -48,10 +53,10 @@
   </main>
 
   <footer class="footer">
-    <div class="footerdiv">
-      <p class="Allrights">2024 all rights reserved by William Ngumo</p>
+    <div class="footer-div">
+      <p class="all-rights">2024 all rights reserved by William Ngumo</p>
 
-      <ul class="footerlist">
+      <ul class="footer-list">
 
         <li><a href=""></a>Privacy Policy</li>
         <li><a href=""></a>Contact US</li>
