--- a/Project/AboutPage/aboutpage-index.html
+++ b/Project/AboutPage/aboutpage-index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="aboutpage-style.css">
+  <link rel="stylesheet" href="PAGE-styles.css">
   <script src="https://kit.fontawesome.com/1edee84bfd.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,24 +16,23 @@
 
 </header>
 
-<nav class="Navsec">
-  <div class="Sociallinks">
+<nav class="nav-sec">
+  <div class="social-links">
     <a href="#" target="_blank"><i class="fa-solid fa-bars"></i></a>
 
 
 
   </div>
-  <ul class="navseclist">
-    <li><a href=""></a>Home</li>
+  <ul class="nav-sec-list">
+    <li><a href="HomePage-index.html">Home</a></li>
     <li><a href=""></a>Browse</li>
-    <li><a href=""></a>About Us</li>
+    <li><a href="aboutpage-index.html">About</a></li>
+    <img class="logo" src="assets/Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
 
-    <img class="logo" src="Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
-
-   <ul class="navseclist2">
+   <ul class="nav-sec-list2">
     <li><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
     <li><a href=""></a>Orders</li>
-    <li><a href="ContactUS-index.html"></a><i class="fa-solid fa-phone"></i></li>
+    <li><a href="./Project/AboutPage/ContactUS-index.html"></a><i class="fa-solid fa-phone"></i></li>
    </ul>
   </ul>
 
@@ -54,15 +53,17 @@
 
   <div class="Statement">
  <div class="sonk">
-    <video class="video" autoplay muted loop width="" height="200" controls>
-      <source src="3015488-hd_1920_1080_24fps.mp4" type="video/mp4">
+    <video class="video" autoplay muted loop width="400" height="200" controls>
+      <source src="assets/3015488-hd_1920_1080_24fps.mp4" type="video/mp4">
       </video>
-      <img src="Untitled_design-removebg-preview.png" alt="picture of me" width="100" height="auto">
+      <img src="assets/Untitled_design-removebg-preview.png" alt="picture of me" width="100" height="auto">
       <p>“Find Your Perfect Meal, OrderAhead, and Enjoy”</p>
-      <video class="video" autoplay muted loop width="" height="200" controls>
-        <source src="3195369-uhd_3840_2160_25fps.mp4" type="video/mp4">
+      <video class="video" autoplay muted loop width="400" height="200" controls>
+        <source src="assets/3195369-uhd_3840_2160_25fps.mp4" type="video/mp4">
         </video>
   </div>
+  <br>
+  <br>
 
      <h1>About Us</h1>
 
@@ -74,14 +75,20 @@
 
     </p>
   </div>
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
   </div>
   <div class="CEO">
   <h3>William Ngumo</h3>
-  <img src="IMG_3825.jpeg" alt="picture of me" width="100" height="auto">
   <p>Founder & CEO</p>
+  <img src="assets/IMG_3825.jpeg" alt="picture of me" width="200" height="auto">
+
   <p>William has been Pationate about building a website that Eases the Stress
     of dining in at your favorite high-end resturant. <br>Revolutionizing
     the food industry, brining convenience and quality together to create
@@ -92,10 +99,10 @@
 
 </main>
 <footer class="footer">
-  <div class="footerdiv">
-    <p class="Allrights">2024 all rights reserved by William Ngumo</p>
+  <div class="footer-div">
+    <p class="all-rights">2024 all rights reserved by William Ngumo</p>
 
-    <ul class="footerlist">
+    <ul class="footer-list">
 
       <li><a href=""></a>Privacy Policy</li>
       <li><a href=""></a>Contact US</li>
