updated capstone week 7 HW

--- a/Project/AboutPage/aboutpage-index.html
+++ b/Project/AboutPage/aboutpage-index.html
@@ -25,14 +25,14 @@
   </div>
   <ul class="nav-sec-list">
     <li><a href="HomePage-index.html">Home</a></li>
-    <li><a href=""></a>Browse</li>
+    <li><a href="Browse-index.html">Browse</a></li>
     <li><a href="aboutpage-index.html">About</a></li>
     <img class="logo" src="assets/Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
 
    <ul class="nav-sec-list2">
-    <li><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
-    <li><a href=""></a>Orders</li>
-    <li><a href="./Project/AboutPage/ContactUS-index.html"></a><i class="fa-solid fa-phone"></i></li>
+    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+    <li><a href="Orders-index.html">Orders</a></li>
+    <li><a href="ContactUS-index.html"><i class="fa-solid fa-phone"></i></a></li>
    </ul>
   </ul>
 
@@ -53,17 +53,16 @@
 
   <div class="Statement">
  <div class="sonk">
-    <video class="video" autoplay muted loop width="400" height="200" controls>
+    <video class="video" autoplay muted loop controls>
       <source src="assets/3015488-hd_1920_1080_24fps.mp4" type="video/mp4">
       </video>
       <img src="assets/Untitled_design-removebg-preview.png" alt="picture of me" width="100" height="auto">
       <p>“Find Your Perfect Meal, OrderAhead, and Enjoy”</p>
-      <video class="video" autoplay muted loop width="400" height="200" controls>
+      <video class="video" autoplay muted loop controls>
         <source src="assets/3195369-uhd_3840_2160_25fps.mp4" type="video/mp4">
         </video>
   </div>
-  <br>
-  <br>
+
 
      <h1>About Us</h1>
 
@@ -75,13 +74,6 @@
 
     </p>
   </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
   </div>
   <div class="CEO">
@@ -98,15 +90,16 @@
 
 
 </main>
+
 <footer class="footer">
   <div class="footer-div">
     <p class="all-rights">2024 all rights reserved by William Ngumo</p>
 
     <ul class="footer-list">
 
-      <li><a href=""></a>Privacy Policy</li>
-      <li><a href=""></a>Contact US</li>
-      <li><a href=""></a>About Us</li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="ContactUS-index.html">Contact US</a></li>
+      <li><a href="aboutpage-index.html">About Us</a></li>
 
 
 
@@ -116,7 +109,7 @@
 </footer>
 
 
-<script src="aboutpage-index.js"></script>
+<script src="PAGE-index.js"></script>
 </body>
 
 </html>
