--- a/Project/AboutPage/ContactUS-index.html
+++ b/Project/AboutPage/ContactUS-index.html
@@ -24,16 +24,16 @@
 
     </div>
     <ul class="nav-sec-list">
-      <li><a href="HomePage-index.html"></a>Home</li>
-      <li><a href="#"></a>Browse</li>
-      <li><a href="aboutpage-index.html"></a>About Us</li>
+      <li><a href="HomePage-index.html">Home</a></li>
+      <li><a href="Browse-index.html">Browse</a></li>
+      <li><a href="aboutpage-index.html">About US</a></li>
 
       <img class="logo" src="assets/Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
 
      <ul class="nav-sec-list2">
-      <li><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
-      <li><a href=""></a>Orders</li>
-      <li><a href="3147531138"></a><i class="fa-solid fa-phone"></i></li>
+      <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+      <li><a href="Orders-index.html">Orders</a></li>
+      <li><a href="ContactUS-index.html"><i class="fa-solid fa-phone"></i></a></li>
      </ul>
     </ul>
 
@@ -47,41 +47,31 @@
 
     </section>
 
-
-  </main>
-
-
-
-  <div class="form-section">
+    <div class="form-section">
     <!-- <img src="assets/pexels-tima-miroshnichenko-5912677.jpg" alt="here to help png" width="200" height="auto"> -->
     <h1>Contact US</h1>
 
     <form action="submit form">
       <label for="name">UserName</label>
       <input type="text" name="name" placeholder="UserName" required>
-      <br>
-      <br>
-      <br>
-
       <label for="Email">Email</label>
       <input type="email" name="email" placeholder="Enter Your Email" required>
-      <br>
-      <br>
-      <br>
-
       <label for="message">message</label>
       <textarea id="message" name="message" rows="4" placeholder="Your message"></textarea>
-      <br>
-      <br>
-      <br>
       <button type="submit">Submit</button>
-      <br>
-      <br>
+
       <h3>Thanks fo contacting Us!!!</h3>
 
     </form>
 
   </div>
+
+
+  </main>
+
+
+
+
 
 
 
@@ -96,9 +86,9 @@
 
       <ul class="footer-list">
 
-        <li><a href=""></a>Privacy Policy</li>
-        <li><a href=""></a>Contact US</li>
-        <li><a href="aboutpage-index.html"></a>About Us</li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="ContactUS-index.html">Contact US</a></li>
+        <li><a href="aboutpage-index.html">About Us</a></li>
 
 
 
@@ -106,7 +96,7 @@
 
 
   </footer>
-  <script src="ContactUS-index.js"></script>
+  <script src="PAGE-index.js"></script>
 
 </body>
 </html>
