--- a/Project/AboutPage/HomePage-index.html
+++ b/Project/AboutPage/HomePage-index.html
@@ -12,12 +12,7 @@
   <script src="https://kit.fontawesome.com/1edee84bfd.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header class="ddf">
-
-
-
-  </header>
-
+<img src="   " alt="picture of food">
 
 
   <nav class="nav-sec">
@@ -29,46 +24,28 @@
     </div>
     <ul class="nav-sec-list">
       <li><a href="HomePage-index.html">Home</a></li>
-      <li><a href=""></a>Browse</li>
-      <li><a href="aboutpage-index.html">About</a></li>
+      <li><a href="Browse-index.html">Browse</a></li>
+      <li><a href="aboutpage-index.html">About US</a></li>
 
-      <img class="logo" src="Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
+      <img class="logo" src="assets/Untitled_design-removebg-preview.png" alt="logo" width="100" height="auto">
 
      <ul class="nav-sec-list2">
-      <li><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
-      <li><a href=""></a>Orders</li>
+      <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+      <li><a href="Orders-index.html">Orders</a></li>
       <li><a href="ContactUS-index.html"><i class="fa-solid fa-phone"></i></a></li>
      </ul>
     </ul>
 
 
   </nav>
-  <main>
-    <h1 class="firster">HomePage</h1>
 
 
 
 
 
-  </main>
-
-  <footer class="footer">
-    <div class="footer-div">
-      <p class="all-rights">2024 all rights reserved by William Ngumo</p>
-
-      <ul class="footer-list">
-
-        <li><a href=""></a>Privacy Policy</li>
-        <li><a href=""></a>Contact US</li>
-        <li><a href="aboutpage-index.html"></a>About Us</li>
 
 
-
-    </div>
-
-
-  </footer>
-  <script src="HomePage-inxed.js"></script>
+  <script src="PAGE-index.js"></script>
 
 </body>
 </html>
