--- a/Project/AboutPage/HomePage-index.html
+++ b/Project/AboutPage/HomePage-index.html
@@ -12,7 +12,8 @@
   <script src="https://kit.fontawesome.com/1edee84bfd.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<img src="   " alt="picture of food">
+
+  <header>
 
 
   <nav class="nav-sec">
@@ -38,6 +39,7 @@
 
 
   </nav>
+</header>
 
 
 
